New achievement Seamstress (Level 6)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 30/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 396 points<br>
+Unlocked 30/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 403 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -98,6 +98,7 @@ Unlocked 30/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Product Manager (Level 6)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Seamstress (Level 4)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Seamstress (Level 5)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
+<li><div class="title">Seamstress (Level 6)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 6)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -110,30 +111,30 @@ Unlocked 30/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1288 status
-   1228 --git-dir=.git
+   1292 status
+   1237 --git-dir=.git
     687 checkout
-    492 branch
-    469 commit
-    358 difftool
-    347 add
+    493 branch
+    472 commit
+    359 difftool
+    349 add
     340 help
     336 rebase
-    332 push
-    262 reset
-    206 rev-parse
+    336 push
+    263 reset
+    212 rev-parse
     176 clean
     166 --git-dir=/home/stavros/git/otp/.git
-    158 diff
-    148 stash
+    159 diff
+    149 stash
      99 pull
-     83 log
+     84 log
      74 mergetool
-     64 show
+     66 show
      51 remote
      50 tree
      48 rm
-     38 cherry-pick
+     39 cherry-pick
      37 bisect
      34 mv
      25 merge
