--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 30/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 403 points<br>
+Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 405 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -59,6 +59,7 @@ Unlocked 30/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Thug (Level 1)</div>  <div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
 <li><div class="title">Apprentice Thug (Level 2)</div>  <div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
 <li><div class="title">Apprentice Thug (Level 3)</div>  <div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
+<li><div class="title">Apprentice Tree Trimmer (Level 1)</div>  <div class="info">Rewrite branches with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-filter-branch.html">git-filter-branch</a></div></li>
 <li><div class="title">Author (Level 4)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Author (Level 5)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Author (Level 6)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -111,43 +112,44 @@ Unlocked 30/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1292 status
-   1237 --git-dir=.git
-    687 checkout
-    493 branch
-    472 commit
-    359 difftool
-    349 add
-    340 help
-    336 rebase
-    336 push
-    263 reset
-    212 rev-parse
-    176 clean
-    166 --git-dir=/home/stavros/git/otp/.git
-    159 diff
-    149 stash
-     99 pull
-     84 log
-     74 mergetool
-     66 show
-     51 remote
+   1317 status
+   1282 --git-dir=.git
+    699 checkout
+    541 branch
+    482 commit
+    362 difftool
+    352 add
+    351 help
+    348 push
+    339 rebase
+    268 reset
+    260 rev-parse
+    180 diff
+    180 clean
+    170 --git-dir=/home/stavros/git/otp/.git
+    150 stash
+    105 show
+    102 pull
+     98 log
+     76 mergetool
+     57 remote
      50 tree
      48 rm
-     39 cherry-pick
+     44 cherry-pick
      37 bisect
      34 mv
      25 merge
-     12 clone
-     11 init
+     18 clone
+     12 init
+      9 --git-dir=
       8 --git-dir=/home/stavros/git/dialyzer_tests/.git
-      8 --git-dir=
+      8 blame
       7 gc
-      7 blame
       5 ls-remote
       4 tag
       3 config
       2 --git-dir=/home/stavros/git/dialyzer-bugs/.git
+      2 filter-branch
       2 fetch
       1 --version
       1 revert
@@ -185,7 +187,6 @@ There are 50 Achievements. Some achievements can be leveled up depending on the 
 <li><div class="title">Postman</div><div class="info">Send a collection of patches from stdin to an IMAP folder with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-imap-send.html">git-imap-send</a></div></li>
 <li><div class="title">Stamp Collector</div><div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a> --date=relative</div></li>
 <li><div class="title">Traveler</div><div class="info">Streamed changes between another rcs with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-svn.html">git-svn</a> or <a href="http://www.kernel.org/pub/software/scm/git/docs/git-p4.html">git-p4</a>.</div></li>
-<li><div class="title">Tree Trimmer</div><div class="info">Rewrite branches with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-filter-branch.html">git-filter-branch</a></div></li>
 <li><div class="title">Web Designer</div><div class="info">Instantly browse your working repository in gitweb with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-instaweb.html">git-instaweb</a></div></li>
 </ul></div>
 </body></html>
