--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 418 points<br>
+Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 421 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -29,6 +29,7 @@ Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Cleaning lady (Level 3)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Goldsmith (Level 1)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
+<li><div class="title">Apprentice Goldsmith (Level 2)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 3)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -114,28 +115,28 @@ Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1369 status
-   1316 --git-dir=.git
-    712 checkout
-    556 branch
-    509 commit
-    373 difftool
-    371 add
-    366 push
-    360 help
-    346 rebase
-    269 reset
-    264 rev-parse
-    189 clean
-    186 diff
-    177 --git-dir=/home/stavros/git/otp/.git
-    152 stash
-    113 show
-    109 pull
+   1489 status
+   1464 --git-dir=.git
+    783 checkout
+    611 branch
+    542 commit
+    410 add
+    392 push
+    391 help
+    388 difftool
+    376 rebase
+    288 rev-parse
+    274 reset
+    219 clean
+    210 diff
+    178 --git-dir=/home/stavros/git/otp/.git
+    167 stash
+    117 show
+    117 pull
      99 log
-     76 mergetool
+     97 mergetool
      63 remote
-     50 tree
+     52 tree
      49 rm
      44 cherry-pick
      37 bisect
@@ -144,13 +145,14 @@ Git commands sorted by usage:
      21 clone
      12 init
       9 --git-dir=
+      8 ls-remote
       8 --git-dir=/home/stavros/git/dialyzer_tests/.git
       8 blame
       7 gc
-      5 ls-remote
       4 tag
       4 filter-branch
       3 config
+      2 --git-dir=/home/stavros/git/disco/.git
       2 --git-dir=/home/stavros/git/dialyzer-bugs/.git
       2 fetch
       1 --version
