--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 421 points<br>
+Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 429 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -88,6 +88,7 @@ Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Master Author (Level 8)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Author (Level 9)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Cleaning lady (Level 7)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
+<li><div class="title">Master Presenter (Level 7)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Master Product Manager (Level 7)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -115,37 +116,39 @@ Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1489 status
-   1464 --git-dir=.git
-    783 checkout
-    611 branch
-    542 commit
-    410 add
-    392 push
-    391 help
-    388 difftool
-    376 rebase
-    288 rev-parse
-    274 reset
-    219 clean
-    210 diff
-    178 --git-dir=/home/stavros/git/otp/.git
-    167 stash
-    117 show
-    117 pull
+   1914 rev-parse
+   1573 --git-dir=.git
+   1541 status
+    812 checkout
+    798 symbolic-ref
+    614 branch
+    565 commit
+    438 add
+    413 help
+    411 push
+    411 difftool
+    387 rebase
+    283 reset
+    221 clean
+    217 diff
+    180 --git-dir=/home/stavros/git/otp/.git
+    173 stash
+    120 show
+    119 pull
      99 log
      97 mergetool
      63 remote
-     52 tree
-     49 rm
-     44 cherry-pick
+     58 tree
+     50 rm
+     49 cherry-pick
      37 bisect
      34 mv
      25 merge
-     21 clone
+     24 clone
+     14 ls-files
      12 init
+     11 ls-remote
       9 --git-dir=
-      8 ls-remote
       8 --git-dir=/home/stavros/git/dialyzer_tests/.git
       8 blame
       7 gc
