New achievement Apprentice Chimney Sweeper (Level 3)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 429 points<br>
+Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 433 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -26,6 +26,7 @@ Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Butcher (Level 3)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Chimney Sweeper (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Chimney Sweeper (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
+<li><div class="title">Apprentice Chimney Sweeper (Level 3)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Cleaning lady (Level 3)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Goldsmith (Level 1)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
@@ -116,45 +117,46 @@ Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1914 rev-parse
-   1573 --git-dir=.git
-   1541 status
-    812 checkout
-    798 symbolic-ref
-    614 branch
-    565 commit
-    438 add
-    413 help
-    411 push
-    411 difftool
-    387 rebase
-    283 reset
-    221 clean
-    217 diff
-    180 --git-dir=/home/stavros/git/otp/.git
-    173 stash
-    120 show
-    119 pull
+   3447 rev-parse
+   1628 --git-dir=.git
+   1563 status
+   1539 symbolic-ref
+    822 checkout
+    616 branch
+    588 commit
+    465 add
+    434 difftool
+    428 help
+    423 push
+    419 rebase
+    296 reset
+    224 clean
+    218 diff
+    182 --git-dir=/home/stavros/git/otp/.git
+    177 stash
+    133 show
+    123 pull
      99 log
      97 mergetool
-     63 remote
-     58 tree
-     50 rm
-     49 cherry-pick
+     66 remote
+     59 tree
+     52 rm
+     52 cherry-pick
      37 bisect
-     34 mv
+     35 mv
      25 merge
-     24 clone
+     25 clone
      14 ls-files
      12 init
      11 ls-remote
       9 --git-dir=
       8 --git-dir=/home/stavros/git/dialyzer_tests/.git
+      8 gc
       8 blame
-      7 gc
       4 tag
       4 filter-branch
       3 config
+      2 --git-dir=/home/stavros/git/Documents/.git
       2 --git-dir=/home/stavros/git/disco/.git
       2 --git-dir=/home/stavros/git/dialyzer-bugs/.git
       2 fetch
