New achievement Master Historian (Level 7)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 433 points<br>
+Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 441 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -89,6 +89,7 @@ Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Master Author (Level 8)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Author (Level 9)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Cleaning lady (Level 7)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
+<li><div class="title">Master Historian (Level 7)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Presenter (Level 7)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Master Product Manager (Level 7)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -117,31 +118,31 @@ Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   3447 rev-parse
-   1628 --git-dir=.git
-   1563 status
-   1539 symbolic-ref
-    822 checkout
-    616 branch
-    588 commit
-    465 add
-    434 difftool
-    428 help
-    423 push
-    419 rebase
-    296 reset
-    224 clean
-    218 diff
+   5050 rev-parse
+   2315 symbolic-ref
+   1713 --git-dir=.git
+   1599 status
+    844 checkout
+    632 branch
+    612 commit
+    487 add
+    446 help
+    444 push
+    443 difftool
+    424 rebase
+    299 reset
+    233 clean
+    226 diff
+    185 stash
     182 --git-dir=/home/stavros/git/otp/.git
-    177 stash
-    133 show
-    123 pull
-     99 log
-     97 mergetool
-     66 remote
-     59 tree
-     52 rm
-     52 cherry-pick
+    142 show
+    132 pull
+    105 log
+    100 mergetool
+     70 remote
+     61 tree
+     54 cherry-pick
+     53 rm
      37 bisect
      35 mv
      25 merge
@@ -154,16 +155,17 @@ Git commands sorted by usage:
       8 gc
       8 blame
       4 tag
+      4 --git-dir=/home/stavros/git/papers/.git
+      4 --git-dir=/home/stavros/git/Documents/.git
       4 filter-branch
       3 config
-      2 --git-dir=/home/stavros/git/Documents/.git
+      2 merge-base
       2 --git-dir=/home/stavros/git/disco/.git
       2 --git-dir=/home/stavros/git/dialyzer-bugs/.git
       2 fetch
       1 --version
       1 revert
       1 reflog
-      1 merge-base
       1 grep
       1 fsck
       1 achievements
