New achievement Master Stone Mason (Level 9)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 441 points<br>
+Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 451 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -96,6 +96,7 @@ Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 8)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Master Stone Mason (Level 9)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Miller (Level 4)</div>  <div class="info">Add only part of a file to the stage 272 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Presenter (Level 4)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Presenter (Level 5)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
@@ -118,46 +119,47 @@ Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   5050 rev-parse
-   2315 symbolic-ref
-   1713 --git-dir=.git
-   1599 status
-    844 checkout
-    632 branch
-    612 commit
-    487 add
-    446 help
-    444 push
-    443 difftool
-    424 rebase
-    299 reset
-    233 clean
-    226 diff
+   5830 rev-parse
+   2483 symbolic-ref
+   1756 --git-dir=.git
+   1616 status
+    848 checkout
+    635 branch
+    623 commit
+    499 add
+    457 difftool
+    450 rebase
+    447 push
+    447 help
+    306 reset
+    248 clean
+    229 diff
+    186 --git-dir=/home/stavros/git/otp/.git
     185 stash
-    182 --git-dir=/home/stavros/git/otp/.git
-    142 show
-    132 pull
-    105 log
-    100 mergetool
-     70 remote
+    150 show
+    134 pull
+    114 log
+    111 mergetool
+     71 remote
      61 tree
+     54 rm
      54 cherry-pick
-     53 rm
      37 bisect
      35 mv
+     26 clone
      25 merge
-     25 clone
      14 ls-files
      12 init
      11 ls-remote
+     10 blame
       9 --git-dir=
       8 --git-dir=/home/stavros/git/dialyzer_tests/.git
       8 gc
-      8 blame
       4 tag
       4 --git-dir=/home/stavros/git/papers/.git
       4 --git-dir=/home/stavros/git/Documents/.git
       4 filter-branch
+      3 reflog
       3 config
       2 merge-base
       2 --git-dir=/home/stavros/git/disco/.git
@@ -165,7 +167,6 @@ Git commands sorted by usage:
       2 fetch
       1 --version
       1 revert
-      1 reflog
       1 grep
       1 fsck
       1 achievements
