--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 451 points<br>
+Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 460 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -89,6 +89,7 @@ Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Master Author (Level 8)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Author (Level 9)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Cleaning lady (Level 7)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
+<li><div class="title">Master Cleaning lady (Level 8)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Master Historian (Level 7)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Presenter (Level 7)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Master Product Manager (Level 7)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -119,23 +120,23 @@ Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   5830 rev-parse
-   2483 symbolic-ref
+   6147 rev-parse
+   2639 symbolic-ref
    1756 --git-dir=.git
-   1616 status
+   1619 status
     848 checkout
     635 branch
-    623 commit
+    624 commit
     499 add
     457 difftool
     450 rebase
-    447 push
-    447 help
-    306 reset
-    248 clean
+    448 push
+    448 help
+    307 reset
+    249 clean
     229 diff
-    186 --git-dir=/home/stavros/git/otp/.git
-    185 stash
+    192 --git-dir=/home/stavros/git/otp/.git
+    187 stash
     150 show
     134 pull
     114 log
@@ -146,7 +147,7 @@ Git commands sorted by usage:
      54 cherry-pick
      37 bisect
      35 mv
-     26 clone
+     27 clone
      25 merge
      14 ls-files
      12 init
