New achievement Master Socialite (Level 9)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 460 points<br>
+Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 470 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -95,6 +95,7 @@ Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Master Product Manager (Level 7)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Master Socialite (Level 9)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 8)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 9)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -120,36 +121,38 @@ Unlocked 31/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   6147 rev-parse
-   2639 symbolic-ref
-   1756 --git-dir=.git
-   1619 status
-    848 checkout
-    635 branch
-    624 commit
-    499 add
-    457 difftool
-    450 rebase
-    448 push
-    448 help
-    307 reset
-    249 clean
-    229 diff
+  10686 rev-parse
+   4513 symbolic-ref
+   1797 --git-dir=.git
+   1717 status
+    854 checkout
+    687 commit
+    645 branch
+    573 add
+    510 push
+    500 difftool
+    456 help
+    451 rebase
+    451 diff-index
+    419 diff
+    312 reset
+    259 clean
+    197 stash
     192 --git-dir=/home/stavros/git/otp/.git
-    187 stash
+    170 pull
     150 show
-    134 pull
-    114 log
+    120 log
     111 mergetool
-     71 remote
-     61 tree
-     54 rm
+     79 remote
+     65 tree
+     60 rm
      54 cherry-pick
      37 bisect
      35 mv
-     27 clone
+     29 clone
      25 merge
      14 ls-files
+     13 --git-dir=/home/stavros/git/Concuerror/.git
      12 init
      11 ls-remote
      10 blame
@@ -168,6 +171,7 @@ Git commands sorted by usage:
       2 fetch
       1 --version
       1 revert
+      1 Mon
       1 grep
       1 fsck
       1 achievements
